# move-wasm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  clippy.toml
.fleet/: run.json
common/: Cargo.toml
crates/aptos/: Cargo.toml
crates/aptos/src/: lib.rs  main.rs
crates/aptos/src/framwork/: built_package.rs  extended_checks.rs  mod.rs  module_metadata.rs  zip.rs
crates/aptos/src/framwork/natives/: code.rs  helpers.rs  mod.rs
crates/aptos/src/move_tool/: mod.rs
crates/aptos/src/move_tool/types/: account_address_wrapper.rs  cli_command.rs  cli_config.rs  cli_error.rs  mod.rs  move_package_dir.rs  result.rs  utils.rs
crates/aptos/src/types/: mod.rs
crates/aptos/src/types/transaction/: abort_info.rs  mod.rs  script.rs
devtools/assets/: license_header.txt
examples/aptos/: Cargo.toml
examples/aptos/src/: main.rs
