[package]
name = "aptos-example"
description = "Aptos example"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
aptos-wasm = { workspace = true }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
wasi-experimental-http-wasmtime = "0.10.0"